--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,16 @@
   box-sizing: border-box;
 }
 
-
+body{
+  background-image: url('./IMG/RickAndMorty.gif');
+  background-position: 100%;
+  background-repeat: round;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
 .nav{
   width: 100%;
   height: 150px;
@@ -51,8 +60,7 @@
   width: 100%;
   height: 100%;
   text-align: center;
-  background-image: url('./IMG/RickAndMorty.gif');
-  
+
 }
 
 .contain-input{
@@ -79,7 +87,7 @@
 
 .cards{
   width: 100%;
-  height: auto;
+  height: 100%;
   margin-top: 12px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
